--- a/ClothingStoreAN2/appsettings.json
+++ b/ClothingStoreAN2/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DESKTOP-9DBVOBO\\SQLEXPRESS; Database=ClothingStoreAN; Trusted_Connection=True; TrustServerCertificate=True; "
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
