--- a/ClothingStoreAN2/appsettings.json
+++ b/ClothingStoreAN2/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-9DBVOBO\\SQLEXPRESS; Database=ClothingStoreAN; Trusted_Connection=True; TrustServerCertificate=True; "
+    "DefaultConnection": "Server=DESKTOP-10\\SQLEXPRESS; Database=ClothingStoreAN2; Trusted_Connection=True; TrustServerCertificate=True; "
   },
   "Logging": {
     "LogLevel": {
